--- a/education.html
+++ b/education.html
@@ -82,8 +82,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Kewei(Benedict) Xu</h1>
-        <p>Dual Master Student of Applied Economics and Social Economic Policy<br>Northwestern University<br>The Chinese University of Hong Kong</p>
+        <h1>Kewei (Benedict) Xu</h1>
+        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
     <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
