--- a/personal.html
+++ b/personal.html
@@ -82,8 +82,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Kewei(Benedict) Xu</h1>
-        <p>Dual Master Student of Applied Economics and Social Economic Policy<br>Northwestern University<br>The Chinese University of Hong Kong</p>
+        <h1>Kewei (Benedict) Xu</h1>
+        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
         <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
@@ -121,32 +121,32 @@
         <div>milet</div>
       </div>
 
-      <!--hr />
-      <h3>Recent books I've read and highly recommend</h3>
-      <p><b>Health and Personal Development</b></p>
+      <hr />
+      <h3>Animation, game & music I highly recommend</h3>
+      <p><b>Animation</b></p>
       <ul>
-        <li><em><a href="https://www.amazon.com/Two-Meals-Day-Sustainable-Frustration/dp/1538736950">Two Meals A Day</a></em>, by Mark Sisson and Brad Kearns</li>
-        <li><em><a href="https://www.amazon.com/Positive-Intelligence-Individuals-Achieve-Potential/dp/1608322785">Positive Intelligence</a></em>, by Shirzad Chamine</li>
-        <li><em><a href="https://www.amazon.com/Obesity-Code-Unlocking-Secrets-Weight/dp/1771641258/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Obesity Code</a></em>, by Dr. Jason Fung</li>
-        <li><em><a href="https://blog.supplysideliberal.com/post/2019/6/18/miles-kimball-on-diet-and-health-a-readers-guide">Collection of Blog Posts on Obesity Reduction</a></em>, by Miles Kimball</li>
+        <li><em><a href="https://www.imdb.com/title/tt0112159/">Neon Genesis Evangelion (新世紀エヴァンゲリオン)</a></em>, by 庵野 秀明</li>
+        <li><em><a href="https://anime-eupho.com/">響けユーフォニアム</a></em>, by kyoto Animation</li>
+        <li><em><a href="https://en.wikipedia.org/wiki/Your_Name">Your Name (君の名は)</a></em>, by 新海 誠</li>
+        <!--li><em><a href="https://blog.supplysideliberal.com/post/2019/6/18/miles-kimball-on-diet-and-health-a-readers-guide">Collection of Blog Posts on Obesity Reduction</a></em>, by Miles Kimball</li>
         <li><em><a href="https://www.amazon.com/World-Without-Email-Reimagining-Communication/dp/0525536558">A World Without Email</a></em>, <em><a href="https://www.amazon.com/Digital-Minimalism-Choosing-Focused-Noisy/dp/0525536515">Digital Minimalism</a></em> and <em><a href="https://www.amazon.com/dp/B00X47ZVXM">Deep Work</a></em>, all by Cal Newport</li>
         <li><em><a href="https://www.amazon.com/Atomic-Habits-Proven-Build-Break/dp/0735211299">Atomic Habits</a></em>, by James Clear</li>
-        <li><em><a href="http://joshuafoer.com/moonwalking-with-einstein/">Moonwalking with Einstein</a></em>, by Joshua Foer</li>
+        <li><em><a href="http://joshuafoer.com/moonwalking-with-einstein/">Moonwalking with Einstein</a></em>, by Joshua Foer</li-->
       </ul>
-      <p><b>Historical Nonfiction</b></p>
+      <p><b>Game</b></p>
       <ul>
-        <li><em><a href="https://www.amazon.com/Joseph-Smith-Rough-Stone-Rolling/dp/1400077532">Joseph Smith: Rough Stone Rolling</a></em>, by Richard Lyman Bushman</li>
-        <li><em><a href="https://www.amazon.com/Brigham-Young-Pioneer-Prophet-Hardcover/dp/B00CTCZXGI">Brigham Young: Pioneer Prophet</a></em>, by John G. Turner</li>
-        <li><em><a href="https://www.amazon.com/Theodore-Roosevelt-Modern-Library-Paperback/dp/0375756787">The Rise of Theodore Roosevelt</a></em>, <em><a href="https://www.amazon.com/Theodore-Rex-Edmund-Morris/dp/0812966007">Theodore Rex</a></em> and <em><a href="https://www.amazon.com/Colonel-Roosevelt-Theodore-Edmund-Morris/dp/0375757074">Colonel Roosevelt</a></em>, all by Edmund Morris</li>
-        <li><em><a href="https://www.amazon.com/Food-Explorer-Adventures-Globe-Trotting-Transformed/dp/1101990589">The Food Explorer: The True Adventures of the Globe-Trotting Botanist Who Transformed What America Eats</a></em>, by Daniel Stone</li>
-        <li><em><a href="https://www.amazon.com/1491-Second-Revelations-Americas-Columbus-ebook/dp/B000JMKVE4">1491</a></em>, <em><a href="https://www.amazon.com/1493-Uncovering-World-Columbus-Created-ebook/dp/B004G606EY">1493</a></em>, and <em><a href="https://www.amazon.com/Wizard-Prophet-Remarkable-Scientists-Tomorrows/dp/0307961699">The Wizard and the Prophet</a></em>, all by Charles C. Mann</li>
+        <li><em><a href="https://www.nintendo.com/hk/splatoon2/index.html">Splatoon2</a></em>, by Nintendo</li>
+        <li><em><a href="https://zelda.nintendo.com/tears-of-the-kingdom/">The Legend of Zelda: Tears of the Kingdom</a></em>, by Nintendo</li>
+        <li><em><a href="https://slay-the-spire.fandom.com/wiki/Slay_the_Spire_Wiki">Slay the Spire</a></em></li>
+        <!--li><em><a href="https://www.amazon.com/Food-Explorer-Adventures-Globe-Trotting-Transformed/dp/1101990589">The Food Explorer: The True Adventures of the Globe-Trotting Botanist Who Transformed What America Eats</a></em>, by Daniel Stone</li>
+        <li><em><a href="https://www.amazon.com/1491-Second-Revelations-Americas-Columbus-ebook/dp/B000JMKVE4">1491</a></em>, <em><a href="https://www.amazon.com/1493-Uncovering-World-Columbus-Created-ebook/dp/B004G606EY">1493</a></em>, and <em><a href="https://www.amazon.com/Wizard-Prophet-Remarkable-Scientists-Tomorrows/dp/0307961699">The Wizard and the Prophet</a></em>, all by Charles C. Mann</li-->
       </ul>
-      <p><b>Economics</b></p>
+      <p><b>Music</b></p>
       <ul>
-        <li><em><a href="https://www.amazon.com/Open-Borders-Science-Ethics-Immigration/dp/1250316960">Open Borders: The Science and Ethics of Immigration</a></em>, by Bryan Caplan and Zach Weinersmith</li>
-        <li><em><a href="https://www.amazon.com/Years-That-Matter-Most-College/dp/0544944488">The Years That Matter Most</a></em>, by Paul Tough</li>
+        <li><em><a href="https://www.youtube.com/watch?v=8dCBcVTxRTE&list=RDopkNEbaXsk4&index=3">Inside You</a> <a href="https://www.youtube.com/watch?v=d1KwEOSAkh4&list=RDopkNEbaXsk4&index=9">You & I</a></em>, by milet</li>
+        <li><em><a href="https://www.youtube.com/watch?v=mvkbCZfwWzA">Ref:rain</a></em>, by Aimer</li>
       </ul>
-      <p><b>Science</b></p>
+      <!--p><b>Science</b></p>
       <ul>
         <li><em><a href="https://www.amazon.com/Master-Algorithm-Ultimate-Learning-Machine/dp/0465094279/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr=">The Master Algorithm</a></em>, by Pedro Domingos</li>
         <li><em><a href="https://www.amazon.com/Algorithms-Live-Computer-Science-Decisions/dp/B01D24NAL6/ref=sr_1_1?crid=1BDF5C25H9QMC">Algorithms to Live By</a></em>, by Brian Christian and Tom Griffiths</li>
@@ -154,9 +154,9 @@
       <p><b>Miscellaneous</b></p>
       <ul>
         <li><em><a href="https://www.amazon.com/Word-Secret-Life-Dictionaries-ebook/dp/B01HA4P9VI">Word by Word: The Secret Life of Dictionaries</a></em>, by Kory Stamper</li>
-      </ul>
+      </ul-->
 
-      <hr />
+      <!--hr />
       <h3>My wife's photography website</h3>
       <p>My wife is a budding professional natural-light portrait photogapher. Click <a href="https://nicholeransom.wixsite.com/photography">here</a> to see her portfolio.</p>
       
