--- a/education.html
+++ b/education.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>Kewei (Benedict) Xu</h1>
-        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
+        <p>PhD student of Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
     <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
@@ -122,6 +122,18 @@
      
       <hr />
       <h3>Economics & Policy</h3>
+      <h4><b>ECON 6120 Advanced Macroeconomics (Northeastern University, Fall 2025)</b></h4>
+      Develops basic models used by macroeconomists to study long-run economic growth with exogenous savings and endogenous saving decisions by optimizing households. Studies models incorporating endogenous technology improvements, including the model of increasing product variety and the model of Schumpeterian growth. In the second part of the course, basic models used by macroeconomist are developed to explain short-term fluctuations in aggregate economic variables. Develops a simple real business cycle model, which is subsequently enriched by relaxing assumptions of perfect competition on the production side and monetary neutrality. This is the first advanced graduate-level course introducing modern theories of the aggregate economy.
+      <ul>
+       <li>Instructor: <a href="https://www.scaicedo.com/">Prof. Santiago Caicedo</a></li>
+       <li>Reference book: Hal R. Varian Intermediate Microeconomics A Modern Approach, 8th Edition; Mas-Colell, Andreu, Michael Dennis Whinston, and Jerry R. Green. Microeconomic Theory</li>
+      </ul>
+      <h4><b>ECON 6110 Advanced Microeconomics (Northeastern University, Fall 2025)</b></h4>
+      Discusses consumer choice, classical demand theory, production, choice under uncertainty, competitive markets, and market power, which provide the theoretical foundation of more advanced topics that can be used as the basis to design empirical applications. Requires a strong background in linear algebra, multivariate calculus, and optimization theory for success in the course. A good undergraduate intermediate-level microeconomic theory course is also helpful. This is the first advanced graduate-level course on microeconomic theory for graduate students.
+      <ul>
+       <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/james-dana/">Prof. James Dana</a></li>
+       <li>Reference book: </li>
+      </ul>
       <h4><b>SE POL 418 Economics of Immigration and Welfare (Northwestern University, Fall 2024)</b></h4>
       This course aims to provide an in-depth examination of the theoretical concepts and empirical tools necessary to understand several key aspects of international migration, as well as the welfare implications of immigration for both host and home countries. We will be discussing economic theory and academic papers that have extensive amounts of data analysis.
       <ul>
@@ -293,6 +305,12 @@
 
       <hr />
       <h3 style="margin-bottom:6px margin-top:6px">Math</h3>
+      <h4>ECON6105: Advanced Mathematics and Statistics for Economists (Northeastern University, Fall 2025)</h4>
+      <ul>
+        <li>Covers the fundamental quantitative methods in economics. The first part of the course focuses on the role of mathematical models in economics, the applications of linear algebra, multivariate calculus, and static optimization theory. Studies statistics in the second part of the course, and offers students an opportunity to learn how to apply proper methods of empirical testing in economics. Additionally, introduces the statistical language R to equip students to complete most of the assignments in statistics. This is an advanced graduate course.</li>
+        <li>Instructor: <a href="https://www.mbross-econ.com/" target="_blank">Prof. Matthew Ross</a></li>
+        <li>Textbook: </li>
+      </ul>
       <h4>ECON5102: Mathematics for Economics Analysis (The Chinese University of Hong Kong, Fall 2023)</h4>
       <ul>
         <li>This course reviews some of the mathematical methods most widely used in modern economic analysis, including linear algebra, elementary real analysis, multivariable differential calculus, theory of optimization with constraints, dynamical systems in discrete and continuous times.</li>
