--- a/personal.html
+++ b/personal.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>Kewei (Benedict) Xu</h1>
-        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
+        <p>PhD student of Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
         <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
@@ -137,6 +137,7 @@
       <ul>
         <li><em><a href="https://www.nintendo.com/hk/splatoon2/index.html">Splatoon2</a></em>, by Nintendo</li>
         <li><em><a href="https://zelda.nintendo.com/tears-of-the-kingdom/">The Legend of Zelda: Tears of the Kingdom</a></em>, by Nintendo</li>
+        <li><em><a href="https://www.streetfighter.com/6">Street Fighter 6</a></em>, by Capcom</li>
         <li><em><a href="https://slay-the-spire.fandom.com/wiki/Slay_the_Spire_Wiki">Slay the Spire</a></em></li>
         <!--li><em><a href="https://www.amazon.com/Food-Explorer-Adventures-Globe-Trotting-Transformed/dp/1101990589">The Food Explorer: The True Adventures of the Globe-Trotting Botanist Who Transformed What America Eats</a></em>, by Daniel Stone</li>
         <li><em><a href="https://www.amazon.com/1491-Second-Revelations-Americas-Columbus-ebook/dp/B000JMKVE4">1491</a></em>, <em><a href="https://www.amazon.com/1493-Uncovering-World-Columbus-Created-ebook/dp/B004G606EY">1493</a></em>, and <em><a href="https://www.amazon.com/Wizard-Prophet-Remarkable-Scientists-Tomorrows/dp/0307961699">The Wizard and the Prophet</a></em>, all by Charles C. Mann</li-->
