--- a/research.html
+++ b/research.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>Kewei (Benedict) Xu</h1>
-        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
+        <p>PhD student of Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
     <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
@@ -604,7 +604,7 @@ doi = {10.1016/j.econedurev.2018.04.002}
     -->
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
 
-    <p style="margin:0"> <b>Local Leaders’ Behavior and Economy Performance</b> <br><button class="accordion">
+    <p style="margin:0"> <b>Local Leaders’ Behavior and Economic Performance</b><br>accepted by <a href="https://www.predoc.org/student-research-conference#:~:text=PREDOC.org%20is%20pleased%20to%20announce%20its%20third%20annual,to%20fellow%20undergraduates%2C%20faculty%2C%20PhD%20students%2C%20and%20pre-docs.">PREDOC.org Research Conference</a><br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This study will undertake an empirical investigation into the behaviors of provincial mayors and their impacts on the economy across China. Employing a novel natural language processing technique known as BERTopic, my research team aims to identify mismatches within the political framework </p></div><br>
@@ -623,6 +623,10 @@ doi = {10.1016/j.econedurev.2018.04.002}
     <hr>
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Experiences</h2>
+    <p style="margin:0"> <b>PREDOC.org Research Conference</b>, World Bank</p><br>
+
+    <p style="margin:0"> <b>Decentralized Autonomous Organization Project</b>, Hong Kong Polytechnic University, Research Assistant of <a href="https://wenzhi-ding.com/">Prof. Wenzhi Ding</a></p><br>
+
     <p style="margin:0"> <b>Pre-Admissions Welcome Event 2025 for Ph.D. program in Applied Economics</b>, Northeastern University</p><br>
 
     <p style="margin:0"> <b>Applied Social Sciences Alliance (ASSA) Annual Conference 2025</b>, Hilton San Francisco Union Square</p><br> 
