--- a/education.html
+++ b/education.html
@@ -99,7 +99,7 @@
           <!--a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br-->
           <!--a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec-square"></i> RePEc</a><br-->
           <a href="https://github.com/meteor0823"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <!--a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br-->
+          <a href="https://x.com/BenedictXuEcon" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="https://www.linkedin.com/in/benedict-kewei-xu-852032211/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
@@ -132,7 +132,7 @@
       Discusses consumer choice, classical demand theory, production, choice under uncertainty, competitive markets, and market power, which provide the theoretical foundation of more advanced topics that can be used as the basis to design empirical applications. Requires a strong background in linear algebra, multivariate calculus, and optimization theory for success in the course. A good undergraduate intermediate-level microeconomic theory course is also helpful. This is the first advanced graduate-level course on microeconomic theory for graduate students.
       <ul>
        <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/james-dana/">Prof. James Dana</a></li>
-       <li>Reference book: </li>
+       <li>Reference book: Microeconomic Theory, by Andreu Mas-Colell, Michael Dennis Whinston, Jerry R. Green; Microeconomic Analysis, by Hal Varian, 3rd edition</li>
       </ul>
       <h4><b>SE POL 418 Economics of Immigration and Welfare (Northwestern University, Fall 2024)</b></h4>
       This course aims to provide an in-depth examination of the theoretical concepts and empirical tools necessary to understand several key aspects of international migration, as well as the welfare implications of immigration for both host and home countries. We will be discussing economic theory and academic papers that have extensive amounts of data analysis.
