--- a/research.html
+++ b/research.html
@@ -100,7 +100,7 @@
           <!--a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br-->
           <!--a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec-square"></i> RePEc</a><br-->
           <a href="https://github.com/meteor0823"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <!--a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br-->
+          <a href="https://x.com/BenedictXuEcon" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="https://www.linkedin.com/in/benedict-kewei-xu-852032211/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
