--- a/education.html
+++ b/education.html
@@ -90,7 +90,7 @@
     <h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3>
     <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>  
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
+        <h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3> 
         <h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
