--- a/teaching.html
+++ b/teaching.html
@@ -83,27 +83,27 @@
     <div class="wrapper">
       <header>
         <h1>Kewei (Benedict) Xu</h1>
-        <p>PhD student of Applied Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
+        <p>PhD student of Economics<br><a href="https://www.northeastern.edu/">Northeastern University</a><br></p>
         <p>Research Assitant<br><a href="https://sesp.northwestern.edu/">School of Education And Social Policy, Northwestern University (SESP)</a></p>
         <!--p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p-->
-    <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
-        <!--h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3-->
-    <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://BenedictXu.github.io/">Home</a></h3>
+        <h3><a href="https://BenedictXu.github.io/research.html">Research</a></h3>
+        <h3><a href="https://BenedictXu.github.io/research/CV.pdf">CV</a></h3> 
+        <h3><a href="https://BenedictXu.github.io/education.html">Education</a></h3>   
         <!--h3><a href="https://tyleransom.github.io/code.html">Code</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3--> 
-        <!--h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3-->
+        <h3><a href="https://BenedictXu.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://BenedictXu.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:benedict_xu@tom.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="mailto:benedict.xu2000@gmail.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <!--a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br-->
           <!--a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br-->
           <!--a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec-square"></i> RePEc</a><br-->
           <a href="https://github.com/meteor0823"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <!--a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br-->
+          <a href="https://x.com/BenedictXuEcon" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="https://www.linkedin.com/in/benedict-kewei-xu-852032211/" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
-        <br>
 
     <p><b>Contact:</b><br>Northwestern University<br>School of Education and Social Policy<br>Walter Annenberg Hall, 2120 Campus Drive<br>Evanston, Illinois 60208</p>
     <!--script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
@@ -117,27 +117,27 @@
       <!-- <h2>Teaching Statement</h2> -->
       <!-- <p><a href="https://tyleransom.github.io/teaching/Teaching-Statement.pdf">Download (PDF)</a><br></p> -->
       
-      <h2>Education Experience</h2>
+      <h2>Teaching Experience</h2>
       <!--p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p-->
-     
       <hr />
-      <h3>Economics</h3>
-      <h4><b>Econ 4970/4523: Economics of Education (University of Oklahoma, Fall 2017, Spring 2018, Fall 2018, Fall 2019, Fall 2022)</b></h4>
-      Undergraduate course on causal inference and policy debates in the US education system
+      <h3>Teaching Assistant at NEU</h3>
+      <h4><b>ECON 2560: Applied Econometrics (Northeastern University, Fall 2025)</b></h4>
+      Undergraduate course on econometrics
       <ul>
-       <li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li>
-       <li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
+       <li>Instructor: <a href="https://www.mbross-econ.com/">Prof. Matt Ross</a></li>
+       <!-- <li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
        <li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
        <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF17.pdf">Fall 2017</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF19.pdf">Fall 2019</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF22.pdf">Fall 2022</a>)</li>
-       <li>Other course materials available upon request</li>
-      </ul>
-      <h4><b>Econ 5970/5253: Data Science for Economists (University of Oklahoma, Spring 2018, Spring 2019, Spring 2020, Spring 2021, Spring 2022, Spring 2023)</b></h4>
-      Master's course designed to build data science skills from the perspective of economics
+       <li>Other course materials available upon request</li> -->
+      </ul> 
+      <h4><b>ECON 5110: Microeconomics Theory (Northeastern University, Fall 2025)</b></h4>
+      Postgraduate course on microeconomics theory
       <ul>
-       <li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>,<a href="https://github.com/tyleransom/DScourseS20">Spring 2020</a>,<a href="https://github.com/tyleransom/DScourseS21">Spring 2021</a>,<a href="https://github.com/tyleransom/DScourseS22">Spring 2022</a>,<a href="https://github.com/tyleransom/DScourseS23">Spring 2023</a>)</li>
-       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS21.pdf">Spring 2021</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS22.pdf">Spring 2022</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS23.pdf">Spring 2023</a>)</li>
-      </ul>
-      <h4><b>Econ 6343: Econometrics III (University of Oklahoma, Fall 2020, Fall 2021, Fall 2022)</b></h4>
+        <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/xiaolin-shi/">Prof. Xiaolin Shi</a></li>
+       <!-- <li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>,<a href="https://github.com/tyleransom/DScourseS20">Spring 2020</a>,<a href="https://github.com/tyleransom/DScourseS21">Spring 2021</a>,<a href="https://github.com/tyleransom/DScourseS22">Spring 2022</a>,<a href="https://github.com/tyleransom/DScourseS23">Spring 2023</a>)</li>
+       <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS21.pdf">Spring 2021</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS22.pdf">Spring 2022</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS23.pdf">Spring 2023</a>)</li-->
+      </ul> 
+      <!-- <h4><b>Econ 6343: Econometrics III (University of Oklahoma, Fall 2020, Fall 2021, Fall 2022)</b></h4>
       PhD course on advanced topics in applied micro econometrics (structural estimation, machine learning)
       <ul>
        <li>Course GitHub repository (<a href="https://github.com/OU-PhD-Econometrics/fall-2020">Fall 2020</a>,<a href="https://github.com/OU-PhD-Econometrics/fall-2021">Fall 2021</a>,<a href="https://github.com/OU-PhD-Econometrics/fall-2022">Fall 2022</a>)</li>
@@ -224,7 +224,7 @@
       <h3 style="margin-bottom:6px margin-top:6px">Math</h3>
       <ul>
         <li><a href="http://gradschool.duke.edu/professional-development/programs/certificate-college-teaching" target="_blank">Certificate in College Teaching</a> (Duke University, 2015)</li>
-      </ul>
+      </ul> -->
 
       </section>
     </div>
