edit macroeconomics textbook

--- a/education.html
+++ b/education.html
@@ -122,13 +122,13 @@
      
       <hr />
       <h3>Economics & Policy</h3>
-      <h4><b>ECON 6120 Advanced Macroeconomics (Northeastern University, Fall 2025)</b></h4>
+      <h4><b>ECON 6120 Advanced Macroeconomics Theory (Northeastern University, Fall 2025)</b></h4>
       Develops basic models used by macroeconomists to study long-run economic growth with exogenous savings and endogenous saving decisions by optimizing households. Studies models incorporating endogenous technology improvements, including the model of increasing product variety and the model of Schumpeterian growth. In the second part of the course, basic models used by macroeconomist are developed to explain short-term fluctuations in aggregate economic variables. Develops a simple real business cycle model, which is subsequently enriched by relaxing assumptions of perfect competition on the production side and monetary neutrality. This is the first advanced graduate-level course introducing modern theories of the aggregate economy.
       <ul>
        <li>Instructor: <a href="https://www.scaicedo.com/">Prof. Santiago Caicedo</a></li>
-       <li>Reference book: Hal R. Varian Intermediate Microeconomics A Modern Approach, 8th Edition; Mas-Colell, Andreu, Michael Dennis Whinston, and Jerry R. Green. Microeconomic Theory</li>
+       <li>Reference book: Advanced Macroeconomics, by Romer</li>
       </ul>
-      <h4><b>ECON 6110 Advanced Microeconomics (Northeastern University, Fall 2025)</b></h4>
+      <h4><b>ECON 6110 Advanced Microeconomics Theory (Northeastern University, Fall 2025)</b></h4>
       Discusses consumer choice, classical demand theory, production, choice under uncertainty, competitive markets, and market power, which provide the theoretical foundation of more advanced topics that can be used as the basis to design empirical applications. Requires a strong background in linear algebra, multivariate calculus, and optimization theory for success in the course. A good undergraduate intermediate-level microeconomic theory course is also helpful. This is the first advanced graduate-level course on microeconomic theory for graduate students.
       <ul>
        <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/james-dana/">Prof. James Dana</a></li>
