mit courses add

--- a/education.html
+++ b/education.html
@@ -122,6 +122,12 @@
      
       <hr />
       <h3>Economics & Policy</h3>
+      <h4><b>14.771 Development Economics: Microeconomics Issues (Massachusetts Institute of Technology, Fall 2025)</b></h4>
+      A rigorous introduction to core micro-economic issues in economic development, focusing on both key theoretical contributions and empirical applications to understand both why some countries are poor and on how markets function differently in poor economies. Topics include human capital (education and health); labor markets; credit markets; land markets; firms; and the role of the public sector.
+      <ul>
+       <li>Instructor: <a href="https://economics.mit.edu/people/faculty/esther-duflo">Prof. Esther Duflo</a> and <a href="https://economics.mit.edu/people/faculty/benjamin-olken">Prof. Ben Olken</a></li>
+       <li>Reference book: Ray, Debraj. Development Economics. Princeton University Press, 1998; Banerjee, Abhijit and Esther Duflo. Poor Economics. Public Affairs, 2011.</li>
+      </ul>
       <h4><b>ECON 6120 Advanced Macroeconomics Theory (Northeastern University, Fall 2025)</b></h4>
       Develops basic models used by macroeconomists to study long-run economic growth with exogenous savings and endogenous saving decisions by optimizing households. Studies models incorporating endogenous technology improvements, including the model of increasing product variety and the model of Schumpeterian growth. In the second part of the course, basic models used by macroeconomist are developed to explain short-term fluctuations in aggregate economic variables. Develops a simple real business cycle model, which is subsequently enriched by relaxing assumptions of perfect competition on the production side and monetary neutrality. This is the first advanced graduate-level course introducing modern theories of the aggregate economy.
       <ul>
@@ -308,8 +314,8 @@
       <h4>ECON6105: Advanced Mathematics and Statistics for Economists (Northeastern University, Fall 2025)</h4>
       <ul>
         <li>Covers the fundamental quantitative methods in economics. The first part of the course focuses on the role of mathematical models in economics, the applications of linear algebra, multivariate calculus, and static optimization theory. Studies statistics in the second part of the course, and offers students an opportunity to learn how to apply proper methods of empirical testing in economics. Additionally, introduces the statistical language R to equip students to complete most of the assignments in statistics. This is an advanced graduate course.</li>
-        <li>Instructor: <a href="https://www.mbross-econ.com/" target="_blank">Prof. Matthew Ross</a></li>
-        <li>Textbook: </li>
+        <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/sam-richardson/" target="_blank">Dr. Sam Richardson</a> and <a href="https://www.mbross-econ.com/" target="_blank">Prof. Matthew Ross</a></li>
+        <li>Textbook: Mathematics for Economists by Carl. P. Simon & Lawrence Blume</li>
       </ul>
       <h4>ECON5102: Mathematics for Economics Analysis (The Chinese University of Hong Kong, Fall 2023)</h4>
       <ul>
