--- a/research.html
+++ b/research.html
@@ -623,7 +623,7 @@ doi = {10.1016/j.econedurev.2018.04.002}
     <hr>
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Research Experiences</h2>
-    <p style="margin:0"> <b>PREDOC.org Research Conference</b>, World Bank</p><br>
+    <p style="margin:0"> <b>PREDOC.org Research Conference</b>, World Bank Group</p><br>
 
     <p style="margin:0"> <b>Decentralized Autonomous Organization Project</b>, Hong Kong Polytechnic University, Research Assistant of <a href="https://wenzhi-ding.com/">Prof. Wenzhi Ding</a></p><br>
 
