--- a/education.html
+++ b/education.html
@@ -126,6 +126,7 @@
       A rigorous introduction to core micro-economic issues in economic development, focusing on both key theoretical contributions and empirical applications to understand both why some countries are poor and on how markets function differently in poor economies. Topics include human capital (education and health); labor markets; credit markets; land markets; firms; and the role of the public sector.
       <ul>
        <li>Instructor: <a href="https://economics.mit.edu/people/faculty/esther-duflo">Prof. Esther Duflo</a> and <a href="https://economics.mit.edu/people/faculty/benjamin-olken">Prof. Ben Olken</a></li>
+       <li>Guest: <a href="https://economics.mit.edu/people/faculty/frank-schilbach">Frank Schilbach</a></li>
        <li>Reference book: Ray, Debraj. Development Economics. Princeton University Press, 1998; Banerjee, Abhijit and Esther Duflo. Poor Economics. Public Affairs, 2011.</li>
       </ul>
       <h4><b>ECON 6120 Advanced Macroeconomics Theory (Northeastern University, Fall 2025)</b></h4>
