--- a/education.html
+++ b/education.html
@@ -202,7 +202,7 @@
       <h4><b>Econ 5012: Microeconomic Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on Microeconomic theory.
       <ul>
-       <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=ceshi">Prof. Shi Ce, Matthew</a></li>
+       <li>Instructor: <a href="https://mattshi.weebly.com">Prof. Shi Ce, Matthew</a></li>
        <li>Textbook: Microeconomic Analysis, by Hal Varian, 3rd edition</li>
        <li>Further Reading: Varian, Hal (2014). Intermediate Microeconomics, 9th edition, Norton; Kreps, David (1990). A Course in Microeconomic Theory, Princeton U. Press</li>
        <!--li><a href="https://www.amazon.com/Economics-Education-Michael-Lovenheim/dp/0716777045">Textbook</a></li-->
@@ -214,7 +214,7 @@
       <h4><b>Econ 5022: Macroeconomics Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on macroeconomics.
       <ul>
-       <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=kcmok">Dr. MOK Kai Chung, Wallace</a></li>
+       <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/en/about/people/faculty/regular-faculty-members/dr-mok-kai-chung-wallace/">Dr. MOK Kai Chung, Wallace</a></li>
        <li>Reference book: Advanced Macroeconomics, by David Romer, McGraw-Hill/Irwin; Intermediate Macroeconomics, by Eric Sims, Julio Garin, Robert Lester; Recursive Macroeconomic Theory, by Lars Ljungqvist, Thomas J. Sargent, MIT Press; Applied Computational Economics and Finance, by Mario J. Miranda and Paul L. Fackler</li>
        <!--li>Course GitHub repository (<a href="https://github.com/tyleransom/DScourseS18">Spring 2018</a>,<a href="https://github.com/tyleransom/DScourseS19">Spring 2019</a>,<a href="https://github.com/tyleransom/DScourseS20">Spring 2020</a>,<a href="https://github.com/tyleransom/DScourseS21">Spring 2021</a>,<a href="https://github.com/tyleransom/DScourseS22">Spring 2022</a>,<a href="https://github.com/tyleransom/DScourseS23">Spring 2023</a>)</li-->
        <!--li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/DSevalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS19.pdf">Spring 2019</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS20.pdf">Spring 2020</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS21.pdf">Spring 2021</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS22.pdf">Spring 2022</a>,<a href="https://tyleransom.github.io/teaching/DSevalsS23.pdf">Spring 2023</a>)</li-->
@@ -222,7 +222,7 @@
       <h4><b>Econ 5122: Econometric Analysis and Applications (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course on advanced topics in applied econometrics.
       <ul>
-        <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=mzli">Prof. Li Zhen Merrick</a></li>
+        <li>Instructor: <a href="https://sites.google.com/view/merrickli">Prof. Li Zhen Merrick</a></li>
         <li>Textbook: Angrist, Joshua and Jorn-Steffen Pischke. 2009. Mostly Harmless Econometrics; Cameron, Colin and Pravin Trivedi. 2009. Microeconometrics Using Stata</li>
       </ul>
       <h4><b>Econ5542: Analysis of Fiscal and Monetary Policy in China (The Chinese University of Hong Kong, Spring 2024)</b></h4>
@@ -234,7 +234,7 @@
       <h4><b>Econ5831: Special Topics in Economics II- China Financial Markets (The Chinese University of Hong Kong, Fall 2023)</b></h4>
       Master's course aims to provide an in-depth coverage of the financial system in China.
       <ul>
-        <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty?view=faculty&id=shulin">Prof. Shu Lin</a></li>
+        <li>Instructor: <a href="https://shulin75.weebly.com">Prof. Shu Lin</a></li>
         <li>Reference book: Arcand, Jean Louis, Enrico Berkes and Ugo Panizza. 2015. Too Much Finance? Journal of Economic Growth 20: 105-148.; Demirgüç-Kunt, Asli, and Vojislav Maksimovic. 1998. Law, finance, and firm growth. Journal of Finance 53 (6): 2107-2137.</li>
       </ul>
       <h4><b>02802190: Chinese Economy (Peking University, Fall 2021)</b></h4>
@@ -321,7 +321,7 @@
       <h4>ECON5102: Mathematics for Economics Analysis (The Chinese University of Hong Kong, Fall 2023)</h4>
       <ul>
         <li>This course reviews some of the mathematical methods most widely used in modern economic analysis, including linear algebra, elementary real analysis, multivariable differential calculus, theory of optimization with constraints, dynamical systems in discrete and continuous times.</li>
-        <li>Instructor: <a href="https://www.econ.cuhk.edu.hk/econ/en-gb/people/faculty/regular-faculty?view=faculty&id=dzli" target="_blank">Prof. Li Duozhe</a></li>
+        <li>Instructor: <a href="https://teacher.econ.cuhk.edu.hk/~duozheli/" target="_blank">Prof. Li Duozhe</a></li>
         <li>Textbook: Carl P. Simon and Lawrence Blume, Mathematics for Economists, Norton, 1994.; Alpha C. Chiang and Kevin Wainwright, Fundamental Methods of Mathematical Economics, McGraw-Hill, 2005.</li>
       </ul>
       <h4>MATH1002: Linear Algebra (The University of Sydney, Spring 2022)</h4>
