--- a/education.html
+++ b/education.html
@@ -122,11 +122,26 @@
      
       <hr />
       <h3>Economics & Policy</h3>
+      <h4><b>ECON 7710 Microeconomics Theory 2 (Northeastern University, Spring 2026)</b></h4>
+      Continues ECON 6110, building on its theories. Topics include game theory, economics of information, incentive theory, welfare economics, general equilibrium, and social choice theory.
+      <ul>
+        <li>Instructor: <a href="https://equitablegrowth.org/people/abdul-raheem-shariq-mohammed/">Prof. Shariq Mohammed</a></li>
+      </ul>
+      <h4><b>ECON 7720 Macroeconomics Theory 2 (Northeastern University, Spring 2026)</b></h4>
+      Continues ECON 6120. Offers an advanced course in macroeconomic analysis where economic theory and econometric evidence are brought together to explain economic events and changes at the macro level including economic growth, changes in unemployment and inflation rates, and business cycles. Topics include the Solow growth model, overlapping-generations models, research and development models of growth, real-business-cycle theory, Keynesian theories of economic fluctuations, microfoundations, consumption, investment, unemployment, inflation and monetary theory, and budget deficits and fiscal policy.
+      <ul>
+        <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/onsel-gulbiten//">Prof. Gulbiten, Onsel</a></li>
+      </ul>
+       <h4><b>ECON 6140 Advanced Applied Econometrics (Northeastern University, Spring 2026)</b></h4>
+      Offers students an opportunity to obtain the theoretical tools, computer skills, and experience using econometrics needed to appreciate and do high-quality applied research in economics. Emphasizes understanding how the properties of estimators can be found and their implications for applied research. Introduces the programming language Python, which is integrated into the course. Focuses on methods that are most useful in microeconomic analysis, including classical linear regressions, Gauss-Markov theorem and hypothesis testing, endogeneity, instrumental variable estimation and causality analysis, heteroskedasticity and serial correlations, nonlinearity, panel data methods, difference-in-difference, and regression discontinuity. This is the first advanced graduate-level course on econometrics.
+      <ul>
+        <li>Instructor: <a href="https://jcao0.github.io">Prof. Jianfei Cao</a></li>
+      </ul>
       <h4><b>14.771 Development Economics: Microeconomics Issues (Massachusetts Institute of Technology, Fall 2025)</b></h4>
       A rigorous introduction to core micro-economic issues in economic development, focusing on both key theoretical contributions and empirical applications to understand both why some countries are poor and on how markets function differently in poor economies. Topics include human capital (education and health); labor markets; credit markets; land markets; firms; and the role of the public sector.
       <ul>
        <li>Instructor: <a href="https://economics.mit.edu/people/faculty/esther-duflo">Prof. Esther Duflo</a> and <a href="https://economics.mit.edu/people/faculty/benjamin-olken">Prof. Ben Olken</a></li>
-       <li>Guest: <a href="https://economics.mit.edu/people/faculty/frank-schilbach">Frank Schilbach</a></li>
+       <li>Guest: <a href="https://economics.mit.edu/people/faculty/frank-schilbach">Prof. Frank Schilbach</a>, <a href="https://economics.mit.edu/people/faculty/jacob-moscona">Prof. Jacob Moscona</a> and <a href="https://sendhil.org">Prof. Sendhil Mullainathan</a></li>
        <li>Reference book: Ray, Debraj. Development Economics. Princeton University Press, 1998; Banerjee, Abhijit and Esther Duflo. Poor Economics. Public Affairs, 2011.</li>
       </ul>
       <h4><b>ECON 6120 Advanced Macroeconomics Theory (Northeastern University, Fall 2025)</b></h4>
@@ -241,6 +256,7 @@
       Undergraduate introduction to Chinese Economy.
       <ul>
        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/zhoula/">Prof. Zhou Li-An</a>, <a href="https://www.gsm.pku.edu.cn/faculty/jackie.wang/">Prof. Wang Hui</a>, <a href="https://www.gsm.pku.edu.cn/jsjjxq.jsp?urltype=tree.TreeTempUrl&wbtreeid=1141&user_id=ytang">Prof. Tang Yao</a></li>
+       <li>Teaching Assitant: <a href="https://mpa.sufe.edu.cn/mpaen/ae/36/c9179a241206/page.htm">Dr. Yuling Zhu</a>
        <li>Reference book: Li, H., & Zhou, L. A. (2005). Political turnover and economic performance: the incentive role of personnel control in China. Journal of public economics, 89(9-10), 1743-1762.</li>
        <!--li><a href="http://urfie.net/">Secondary Textbook</a></li-->
        <!--li><a href="http://r4ds.had.co.nz/">Additional Secondary Textbook</a></li-->
@@ -271,7 +287,7 @@
       <h4><b>02839430: Development Economics (Peking University, Fall 2021)</b></h4>
       This course provides an overview of the most relevant topics and methods for understanding and practicing economic development.
       <ul>
-        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/lukas.hensel/">Prof. Lukas Hensel</a></li>
+        <li>Instructor: <a href="https://www.gsm.pku.edu.cn/faculty/lukas.hensel/">Prof. Lukas Hensel</a> and <a href="https://kkwangecon.com">Dr. Kangkai Wang</a></li>
        </ul>
       <h4><b>OLET1143: How Economic Policy Remade Australia (The University of Sydney, Spring 2022)</b></h4>
       This unit examines how Australia has been 'remade' Australian through economic policies. The rationale and success of labour market reform, privatization and international trade policies are critically examined.
