--- a/teaching.html
+++ b/teaching.html
@@ -124,7 +124,7 @@
       <h4><b>ECON 2560: Applied Econometrics (Northeastern University, Fall 2025)</b></h4>
       Undergraduate course on econometrics
       <ul>
-       <li>Instructor: <a href="https://www.mbross-econ.com/">Prof. Matt Ross</a></li>
+       <li>Instructor: <a href="https://www.mbross-econ.com/">Prof. Matt Ross</a> and <a href="https://cssh.northeastern.edu/faculty/roy-gernhardt/">Prof. Roy Gernhardt</a></li>
        <!-- <li><a href="https://tyleransom.github.io/research/LectureCollegeMajorChoiceCh15p2.pdf">Slides on college major choice & consequences</a></li>
        <li><a href="https://tyleransom.github.io/research/TenPrinciplesOfEconOfEd.pdf">10 Principles of the Economics of Education</a></li>
        <li>Student course evaluations (<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF17.pdf">Fall 2017</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsS18.pdf">Spring 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF18.pdf">Fall 2018</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF19.pdf">Fall 2019</a>,<a href="https://tyleransom.github.io/teaching/EconOfEdEvalsF22.pdf">Fall 2022</a>)</li>
