new website title

--- a/teaching.html
+++ b/teaching.html
@@ -121,6 +121,14 @@
       <!--p><a href="https://tyleransom.github.io/teaching/EvalsSummary.pdf">Overall Summary of Teaching Evaluations</a></p-->
       <hr />
       <h3>Teaching Assistant at NEU</h3>
+      <h4><b>ECON 3291: Development Economics (Northeastern University, Spring 2026)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://www.nishithprakash.com">Prof. Nishith Prakash</a></li>
+      </ul>
+      <h4><b>ECON 2350: Statistics for Economists (Northeastern University, Spring 2026)</b></h4>
+      <ul>
+       <li>Instructor: <a href="https://cssh.northeastern.edu/faculty/roy-gernhardt/">Prof. Roy Gernhardt</a></li>
+      </ul>
       <h4><b>ECON 2560: Applied Econometrics (Northeastern University, Fall 2025)</b></h4>
       Undergraduate course on econometrics
       <ul>
